# apisec-api-discover-ruby

./: .gitignore  README.md  action.yml  entrypoint.py  pyproject.toml
.github/workflows/: ci.yml
api_discover/: __init__.py  cli.py  controller_scanner.py  detector.py  models.py  oas_emitter.py  repo.py  reporter.py  route_parser.py  ruby_helpers.py
tests/: test_controller_scanner.py  test_detector.py  test_oas_emitter.py  test_route_parser.py  test_ruby_helpers.py
tests/fixtures/sample_app/: Gemfile
tests/fixtures/sample_app/app/controllers/: health_controller.rb  posts_controller.rb  webhooks_controller.rb
tests/fixtures/sample_app/app/controllers/admin/: users_controller.rb
tests/fixtures/sample_app/app/controllers/api/v1/: users_controller.rb
tests/fixtures/sample_app/config/: routes.rb
tests/fixtures/sample_app/config/routes/: legacy.rb
